[gd_scene load_steps=8 format=2]

[ext_resource path="res://GUI/specific_sortable_table_cell_elements/PriorityControl/PriorityControl.gd" type="Script" id=1]
[ext_resource path="res://GUI/icons/plus_minus/15x15/plus_default_15x15.png" type="Texture" id=2]
[ext_resource path="res://GUI/icons/plus_minus/15x15/plus_mouse_down_15x15.png" type="Texture" id=3]
[ext_resource path="res://GUI/icons/plus_minus/15x15/plus_disabled_15x15.png" type="Texture" id=4]
[ext_resource path="res://GUI/icons/plus_minus/15x15/minus_default_15x15.png" type="Texture" id=5]
[ext_resource path="res://GUI/icons/plus_minus/15x15/minus_mouse_down_15x15.png" type="Texture" id=6]
[ext_resource path="res://GUI/icons/plus_minus/15x15/minus_disabled_15x15.png" type="Texture" id=7]

[node name="HBoxContainer" type="HBoxContainer"]
margin_right = 65.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="Label_priority" type="Label" parent="."]
margin_top = 13.0
margin_right = 33.0
margin_bottom = 27.0
rect_min_size = Vector2( 33, 14 )
size_flags_horizontal = 3
text = "100"
align = 2

[node name="plus" type="TextureButton" parent="."]
margin_left = 38.0
margin_top = 12.0
margin_right = 53.0
margin_bottom = 27.0
rect_min_size = Vector2( 15, 15 )
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="minus" type="TextureButton" parent="."]
margin_left = 58.0
margin_top = 12.0
margin_right = 73.0
margin_bottom = 27.0
rect_min_size = Vector2( 15, 15 )
rect_clip_content = true
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 7 )

[connection signal="mouse_entered" from="plus" to="." method="_on_plus_mouse_entered"]
[connection signal="mouse_exited" from="plus" to="." method="_on_plus_mouse_exited"]
[connection signal="pressed" from="plus" to="." method="_on_plus_pressed"]
[connection signal="mouse_entered" from="minus" to="." method="_on_minus_mouse_entered"]
[connection signal="mouse_exited" from="minus" to="." method="_on_minus_mouse_exited"]
[connection signal="pressed" from="minus" to="." method="_on_minus_pressed"]
